--- a/FINAL WORK/FINAL WORK/MainWindow.xaml
+++ b/FINAL WORK/FINAL WORK/MainWindow.xaml
@@ -16,31 +16,27 @@
 
         <StackPanel x:Name="drawbar" Background="White" Grid.Row="0">
             <StackPanel Height="50">
-                <TextBox Height="50" Margin="120 10 120 10" FontSize="30" FontWeight="Bold">繪畫張數計算機</TextBox>
+                <TextBox Height="50"  Margin="120 10 120 10" FontSize="30" FontWeight="Bold">繪畫張數計算機</TextBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Height="60">
                 <TextBox Margin="10 10 0 10" FontSize="25" FontWeight="Bold"  BorderBrush="White">臨摹</TextBox>
-                <Slider Margin="10,13,10,13" Minimum="0" Maximum="30" x:Name="draw1" ValueChanged="draw1_ValueChanged" Width="277"></Slider>
-                <TextBox FontSize="25" FontWeight="Bold" x:Name="draw1count" Width="48" Margin="0,10"  BorderBrush="White">xxx</TextBox>
-                <Button Margin="5 10 5 10" Width="50"  BorderBrush="White" Click="Button_Click" x:Name="BTN1">上傳</Button>
+                <TextBox FontSize="25" FontWeight="Bold" x:Name="draw1count" Width="330" Margin="0,10"  BorderBrush="White">xxx</TextBox>
+                <Button Margin="5 10 5 10" Width="50"  BorderBrush="White" Click="Button_Click" x:Name="BTN1">更新</Button>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Height="60">
                 <TextBox Margin="10 10 0 10" FontSize="25" FontWeight="Bold"  BorderBrush="White">骨架</TextBox>
-                <Slider Margin="10,13,10,13" Minimum="0" Maximum="30" x:Name="draw2" ValueChanged="draw1_ValueChanged" Width="277"  BorderBrush="White"></Slider>
-                <TextBox FontSize="25" FontWeight="Bold" x:Name="draw2count" Width="48" Margin="0,10" BorderBrush="White">xxx</TextBox>
-                <Button Margin="5 10 5 10" Width="50" BorderBrush="White">上傳</Button>
+                <TextBox FontSize="25" FontWeight="Bold" x:Name="draw2count"  Width="330" Margin="0,10" BorderBrush="White">xxx</TextBox>
+                <Button Margin="5 10 5 10" Width="50" BorderBrush="White" Click="Button_Click_1">更新</Button>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Height="60">
                 <TextBox Margin="10 10 0 10" FontSize="25" FontWeight="Bold" BorderBrush="White">直線</TextBox>
-                <Slider Margin="10,13,10,13" Minimum="0" Maximum="30" x:Name="draw3" ValueChanged="draw1_ValueChanged" Width="277"></Slider>
-                <TextBox FontSize="25" FontWeight="Bold" x:Name="draw3count" Width="48" Margin="0,10" BorderBrush="White">xxx</TextBox>
-                <Button Margin="5 10 5 10" Width="50"  BorderBrush="White">上傳</Button>
+                <TextBox FontSize="25" FontWeight="Bold" x:Name="draw3count" Width="330" Margin="0,10" BorderBrush="White">xxx</TextBox>
+                <Button Margin="5 10 5 10" Width="50"  BorderBrush="White" Click="Button_Click_4">更新</Button>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Height="60">
                 <TextBox Margin="10 10 0 10" FontSize="25" FontWeight="Bold"  BorderBrush="White">光影</TextBox>
-                <Slider Margin="10,13,10,13" Minimum="0" Maximum="30" x:Name="draw4" ValueChanged="draw1_ValueChanged" Width="277"  BorderBrush="White"></Slider>
-                <TextBox FontSize="25" FontWeight="Bold" x:Name="draw4count" Width="48" Margin="0,0,0,0" Height="37"  BorderBrush="White" >xxx</TextBox>
-                <Button Margin="5 10 5 10 "  BorderBrush="White" Width="50" Content="上傳"/>
+                <TextBox FontSize="25" FontWeight="Bold" x:Name="draw4count" Width="330" Margin="0,0,0,0" Height="37"  BorderBrush="White" >xxx</TextBox>
+                <Button Margin="5 10 5 10 "  BorderBrush="White" Width="50" Content="更新" Click="Button_Click_5"/>
             </StackPanel>
 
 
@@ -51,7 +47,7 @@
             </StackPanel>
             <StackPanel Orientation="Horizontal">
                 <TextBox Margin="30 10 10 10" FontSize="25" FontWeight="Bold"  BorderBrush="Gray" Text="臨摹"/>
-                <ProgressBar Height="36" Value="0" Maximum="60" x:Name="MyProgress" Width="302"/>
+                <ProgressBar Height="36"  Maximum="100" x:Name="MyProgress" Width="302" ValueChanged="MyProgress_ValueChanged"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal">
                 <TextBox Margin="30 10 10 10" FontSize="25" FontWeight="Bold"  BorderBrush="Gray">骨架</TextBox>
