--- a/FINAL WORK/FINAL WORK/MainWindow.xaml
+++ b/FINAL WORK/FINAL WORK/MainWindow.xaml
@@ -7,6 +7,10 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="650" Width="480" KeyDown="Window_KeyDown" Closed="Window_Closed">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="459*"/>
+            <ColumnDefinition Width="13*"/>
+        </Grid.ColumnDefinitions>
         <!--格子-->
         <Grid.RowDefinitions>
             <RowDefinition Height="330"></RowDefinition>
@@ -14,40 +18,41 @@
             <RowDefinition ></RowDefinition>
         </Grid.RowDefinitions>
 
-        <StackPanel x:Name="drawbar" Background="White" Grid.Row="0">
-            <StackPanel Height="50">
-                <TextBox Height="50"  Margin="120 10 120 10" FontSize="30" FontWeight="Bold">繪畫張數計算機</TextBox>
+        <StackPanel x:Name="drawbar" Background="White" Grid.Row="0" Grid.ColumnSpan="2">
+            <StackPanel Height="50" Orientation="Horizontal">
+                <TextBox Height="50"  Margin="140 10 10 10" FontSize="25" FontWeight="Bold">繪畫張數計算機</TextBox>
+                
             </StackPanel>
             <StackPanel Orientation="Horizontal" Height="60">
                 <TextBox Margin="10 10 0 10" FontSize="25" FontWeight="Bold"  BorderBrush="White">臨摹</TextBox>
-                <TextBox FontSize="25" FontWeight="Bold" x:Name="draw1count" Width="330" Margin="0,10"  BorderBrush="White">xxx</TextBox>
-                <Button Margin="5 10 5 10" Width="50"  BorderBrush="White" Click="Button_Click" x:Name="BTN1">更新</Button>
+                <TextBox FontSize="25" FontWeight="Bold" x:Name="draw1count" Width="330" Margin="0,10"  BorderBrush="White" TextChanged="draw1count_TextChanged"></TextBox>
+                <Button Margin="5 10 5 10" Width="60"  BorderBrush="White" Click="Button_Click" x:Name="BTN1">瀏覽選取</Button>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Height="60">
                 <TextBox Margin="10 10 0 10" FontSize="25" FontWeight="Bold"  BorderBrush="White">骨架</TextBox>
-                <TextBox FontSize="25" FontWeight="Bold" x:Name="draw2count"  Width="330" Margin="0,10" BorderBrush="White">xxx</TextBox>
-                <Button Margin="5 10 5 10" Width="50" BorderBrush="White" Click="Button_Click_1">更新</Button>
+                <TextBox FontSize="25" FontWeight="Bold" x:Name="draw2count"  Width="330" Margin="0,10" BorderBrush="White"></TextBox>
+                <Button Margin="5 10 5 10" Width="60" BorderBrush="White" Click="Button_Click_1">瀏覽選取</Button>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Height="60">
                 <TextBox Margin="10 10 0 10" FontSize="25" FontWeight="Bold" BorderBrush="White">直線</TextBox>
-                <TextBox FontSize="25" FontWeight="Bold" x:Name="draw3count" Width="330" Margin="0,10" BorderBrush="White">xxx</TextBox>
-                <Button Margin="5 10 5 10" Width="50"  BorderBrush="White" Click="Button_Click_4">更新</Button>
+                <TextBox FontSize="25" FontWeight="Bold" x:Name="draw3count" Width="330" Margin="0,10" BorderBrush="White"></TextBox>
+                <Button Margin="5 10 5 10" Width="60"  BorderBrush="White" Click="Button_Click_4">瀏覽選取</Button>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Height="60">
                 <TextBox Margin="10 10 0 10" FontSize="25" FontWeight="Bold"  BorderBrush="White">光影</TextBox>
-                <TextBox FontSize="25" FontWeight="Bold" x:Name="draw4count" Width="330" Margin="0,0,0,0" Height="37"  BorderBrush="White" >xxx</TextBox>
-                <Button Margin="5 10 5 10 "  BorderBrush="White" Width="50" Content="更新" Click="Button_Click_5"/>
+                <TextBox FontSize="25" FontWeight="Bold" x:Name="draw4count" Width="330" Margin="0,0,0,0" Height="37"  BorderBrush="White" ></TextBox>
+                <Button Margin="5 10 5 10 "  BorderBrush="White" Width="60" Content="瀏覽選取" Click="Button_Click_5"/>
             </StackPanel>
 
 
         </StackPanel>
-        <StackPanel x:Name="drawlist" Background="Gray" Grid.Row="1">
+        <StackPanel x:Name="drawlist" Background="Gray" Grid.Row="1" Grid.ColumnSpan="2">
             <StackPanel Height="50">
                 <TextBox Height="50" Margin="75 10 75 10" FontSize="30" FontWeight="Bold" Background="DimGray" BorderBrush="DimGray">進度條(建議每日各一張</TextBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal">
                 <TextBox Margin="30 10 10 10" FontSize="25" FontWeight="Bold"  BorderBrush="Gray" Text="臨摹"/>
-                <ProgressBar Height="36"  Maximum="100" x:Name="MyProgress" Width="302" ValueChanged="MyProgress_ValueChanged"/>
+                <ProgressBar Height="36"  Maximum="60" x:Name="MyProgress" Width="302" ValueChanged="MyProgress_ValueChanged"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal">
                 <TextBox Margin="30 10 10 10" FontSize="25" FontWeight="Bold"  BorderBrush="Gray">骨架</TextBox>
